# datafabric-sec-manager

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  bandit.baseline  pyproject.toml  report.html  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.chglog/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  boring-cyborg.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  rfc.md
.github/workflows/: codeql-analysis.yml  minimal-tests.yml  publish.yml  python_build.yml  static-checking.yml
sec_manager/: __version__.py  pods_cleaner.py  security.py  user_backend.py
src/datafabric/: migrations_spinner.py  pods_cleaner.py  security.py  user_backend.py
test/: conftest.py  test_cleanup_pods.py  test_security.py  test_spinner.py  test_user_backend.py
tests/: conftest.py  test_cleanup_pods.py  test_migrations_spinner.py  test_security.py  test_user_backend.py
